Problem fixed, burger menu on the wrong side on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1885,9 +1885,7 @@ ADDED
     float: none;
     display: block;
     text-align: left;
-    width: 100%;
     margin: 0;
-    padding: 14px;
   }
   .navbar input[type=text] {
     border: 1px solid #ccc;
